<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AboutActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_about"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/teddy"
        app:civ_border_color="@color/gray_dark"
        app:civ_border_overlay="true"
        app:civ_border_width="5dp" />

    <TextView
        android:id="@+id/tv_my_name"
        style="@style/TextContent"
        android:layout_below="@+id/img_about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/my_name"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tv_my_email"
        style="@style/TextContent"
        android:layout_below="@+id/tv_my_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/my_email"
        android:textColor="@color/gray"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_my_email">

        <TextView
            android:id="@+id/tv_my_desc"
            style="@style/TextContent"
            android:layout_margin="16dp"
            android:text="@string/my_desc"
            android:textAlignment="center"
            android:textColor="@color/gray_light"
            android:textSize="20sp"
            android:textStyle="italic" />

    </ScrollView>


</RelativeLayout>