<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/tv_detail"
        style="@style/TextContent"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/character_details"
        android:textColor="@color/white"
        android:textSize="24sp" />


    <ImageView
        android:id="@+id/img_char_photo"
        android:layout_width="200dp"
        android:layout_height="220dp"
        android:layout_below="@id/tv_detail"
        android:layout_centerHorizontal="true"
        android:background="@color/gray_light"
        android:contentDescription="@string/character_image"
        android:padding="2dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/ironman" />

    <TextView
        android:id="@+id/tv_char_name"
        style="@style/TextContent.Name"
        android:layout_below="@id/img_char_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        tools:text="Heroes Name" />

    <TextView
        android:id="@+id/tv_char_role"
        style="@style/TextContent.Role"
        android:layout_below="@id/tv_char_name"
        android:layout_centerHorizontal="true"
        tools:text="Heroes Role" />

    <TextView
        android:id="@+id/tv_desc"
        style="@style/TextContent"
        android:layout_below="@id/tv_char_role"
        android:layout_margin="16dp"
        android:text="@string/description"
        android:textColor="@color/gray_light"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_desc">

        <TextView
            android:id="@+id/tv_char_detail"
            style="@style/TextContent.Detail"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            android:textStyle="italic"
            tools:text="Detail" />
    </ScrollView>

</RelativeLayout>